# ansible_meetup

./: .ansible-lint  .env.example  .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  Taskfile.yml  ansible.cfg.example  bootstrap  devbox.json  hosts  pyproject.toml  requirements.txt  requirements.yml
ansible/: ansible-navigator.yml  ansible.cfg.example  hosts  requirements.yml
ansible/cloud-init/: Dockerfile  cloud-init.fedora.yml  instance-data.json  validate
ansible/tasks/: config.yml  cron.yml  deploy.yml  docker.yml  framework.yml  git.yml  gum.yml  kind.yml  macos.yml  main.yml  mini.yml  nfs.yml  ping.yml  pkg.yml  pull-repos.yml  theme.yml  user.yml  wallpaper.yml  webmin.yml
ansible/tasks/collections/: requirements.yml
ansible/tasks/templates/: csf.conf.j2  daemon.json.j2  docker-cleanup.timer.j2
ansible/tasks/vars/: .env.json.example  all.yml.example
cloud-init/: cloud-init.ubuntu.yml
docs/: demo.tape  presentation.md
taskfiles/: docker.yml  poetry.yml  redis.yml  vagrant.yml
tasks/: ansible_facts.yml  cockpit.yml  csf.yml  font.yml  git.yml  libvirtd-config.yml  lunarvim.yml  pkg.yml
tasks/templates/: .bash_aliases.j2  docker-cleanup.conf.j2
tasks/vars/: all.yml.example  users.csv.example
vagrant/: Vagrantfile.fedora  Vagrantfile.macos  Vagrantfile.ubuntu
